@@ -12,6 +12,8 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #1350409: Work around signal handling bug in Visual Studio 2005.
+
 - Bug #1281408: Py_BuildValue now works correct even with unsigned longs
   and long longs.
 
